--- a/config.yml
+++ b/config.yml
@@ -4,3 +4,5 @@ tls:
       keyFile: /etc/letsencrypt/live/notagar.diyor28.com/privkey.pem
     - certFile: /etc/letsencrypt/live/traefik.diyor28.com/fullchain.pem
       keyFile: /etc/letsencrypt/live/traefik.diyor28.com/privkey.pem
+    - certFile: /etc/letsencrypt/live/diyor28.com/fullchain.pem
+      keyFile: /etc/letsencrypt/live/diyor28.com/privkey.pem
